Add option to disable move-page and rename-page features

--- a/admin-power-tools.yaml
+++ b/admin-power-tools.yaml
@@ -33,3 +33,6 @@ reports_enabled: true
 
 child_reordering_enabled: true
 child_reordering_immediate: true
+
+move_page_enabled: false
+rename_page_enabled: false
